# nw3d

./: Cargo.toml  build.rs
.cargo/: config
meshes/: fox.mtl  goose.mtl  goose2.mtl
src/: app.rs  eadk.rs  faces.rst  main.rs  vertices.rst
src/gl/: camera.rs  face.rs  light.rs  line.rs  material.rs  mesh.rs  mod.rs  triangle.rs
src/glm/: complex.rs  mod.rs  quaternion.rs  transformation.rs  vec3.rs
