[package]
name = "epsilon-sample-app"
version = "0.1.0"
authors = ["NumWorks <contact@numworks.com>"]
edition = "2018"


[profile.release]
lto = "fat"       # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[profile.dev]
opt-level = 3
lto = "fat"
strip = true

[dependencies]
num-traits = { version = "0.2.17", default-features = false, features = [
    "libm",
] }

[build-dependencies]
obj = "0.10.2"
